Refactor: modular audio2text core, yt-dlp downloader, Tkinter GUI; update README and requirements; ignore outputs; remove local .env

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,5 @@
-# Dependencias base
-# Añade aquí las librerías específicas que necesites
-
-# Común para proyectos con OpenAI
-# openai>=1.0.0
-
-# Común para notebooks
-# jupyter>=1.0.0
-# ipykernel>=6.0.0
-
-# Común para data science
-# pandas>=2.0.0
-# numpy>=1.24.0
-
-# Añade las dependencias específicas de tu proyecto aquí
+yt-dlp>=2024.7.1
+SpeechRecognition>=3.10.0
+pydub>=0.25.1
+moviepy>=1.0.3
+python-dotenv>=1.0.0
